--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -13,4 +13,4 @@ jobs: #Definicion de los jobs
       - name: saludo
         run: echo hola mundo desde la consola
       - name: ejecuto el scipt de node
-        run: node ./github/scripts/saludo.js {{github.actor}}
+        run: node ./.github/scripts/saludo.js {{github.actor}}
