--- a/.github/workflows/triggers.yml
+++ b/.github/workflows/triggers.yml
@@ -2,9 +2,9 @@ name: triggers #nombre del workflow
 run-name: Ejercicio 2 - triggers
 on: 
   push: #evento que lo activara
-    branches: ['actions','develop']
+    branches: [actions,develop]
     paths:
-      - './.github/scripts/*'
+      - './.github/scripts/**.js'
   workflow_dispatch:
     inputs:
       alerta:
@@ -17,6 +17,20 @@ on:
           - bajo
 jobs: #Definicion de los jobs
   saludo: #nombre del job
+    runs-on: ubuntu-latest #Maquina en la que se ejecutara
+    steps: #Lista de steps del job hola-mundo
+      - name: clone repository
+        uses: actions/checkout@v4
+      - name: install node js 
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: saludo
+        run: echo hola mundo desde la consola
+      - name: ejecuto el scipt de node
+        run: node ./.github/scripts/triggers.js ${{inputs.alerta}}
+  saludo-schedule: #nombre del job
+    if: ${{ github.event_name != 'workflow_dispatch' }}
     runs-on: ubuntu-latest #Maquina en la que se ejecutara
     steps: #Lista de steps del job hola-mundo
       - name: clone repository
