--- a/.github/workflows/triggers.yml
+++ b/.github/workflows/triggers.yml
@@ -29,7 +29,7 @@ jobs: #Definicion de los jobs
       - name: ejecuto el scipt de node
         run: node ./.github/scripts/triggers.js ${{inputs.alerta}}
   saludo-schedule: #nombre del job
-    if: ${{ github.event_name != 'workflow_dispatch' }}
+    if: ${{ github.event_name != 'push' }}
     runs-on: ubuntu-latest #Maquina en la que se ejecutara
     steps: #Lista de steps del job hola-mundo
       - name: clone repository
